# ContextFirewall

./: .gitignore  .hfignore  README.md
.github/workflows/: sync-hf-space.yml
backend/: .env.example  Dockerfile  README_hf.md  requirements.txt
backend/app/: __init__.py  activity.py  auth.py  identity.py  main.py  mcp_server.py  models.py
backend/app/cognee_runtime/: __init__.py  bootstrap.py  forget.py  graph.py  hf_embeddings.py  improve.py  ingest.py  llm.py  recall.py  schema.py
backend/app/firewall/: __init__.py  audit.py  checks.py  pack.py  secrets.py
backend/scripts/: dev_integration.py  hf_embed_probe.py  hf_probe.py  mcp_full_probe.py  mcp_http_probe.py  smoke_cognee.py
backend/tests/: test_checks.py  test_identity.py  test_namespace.py  test_rules_nodesets.py  test_secrets.py
blog/: contextfirewall-build-story.md
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: page.tsx
frontend/components/: AccountView.tsx  ActivityFeed.tsx  ConnectView.tsx  GraphView.tsx  Header.tsx  IngestModal.tsx  MemoryCard.tsx  MemoryDrawer.tsx  Overview.tsx  PackPanel.tsx  QueryBar.tsx  RulesView.tsx  Sidebar.tsx  Timeline.tsx  badges.tsx
frontend/lib/: activeKey.ts  api.ts  auth.tsx  operator.ts  supabase.ts  types.ts
mcp/: README.md  pyproject.toml
mcp/contextfirewall_mcp/: __init__.py
mcp/tests/: test_mcp.py
supabase/migrations/: 0001_contextfirewall_auth.sql  0002_lock_down_public_rls.sql  0003_default_privileges_lockdown.sql
(+6 files in other folders)
