[project]
name = "contextfirewall-mcp"
version = "0.1.0"
description = "MCP server that puts the ContextFirewall memory firewall inside your coding agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Himanshu Kumar" }]
dependencies = ["mcp>=1.2.0"]

[project.scripts]
contextfirewall-mcp = "contextfirewall_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contextfirewall_mcp"]
